gwipc_wire_probe_sources = files(
  tests_source_dir / 'integration/gwipc_wire_probe.c',
)
gwipc_peer_probe_sources = {
  'gwipc_probe_server': files(
    tests_source_dir / 'integration/gwipc_probe_server.cpp',
  ),
  'gwipc_probe_client': files(
    tests_source_dir / 'integration/gwipc_probe_client.cpp',
  ),
}
