uinput_m11_protocol_sources = files(
  tests_source_dir / 'helpers/uinput_m11_protocol.cpp',
)
gw_uinput_m11_sources = files(
  tests_source_dir / 'integration/gw_uinput_m11.cpp',
)
m9_fixed_time_sources = files(
  tests_source_dir / 'apps/m9_fixed_time.c',
)
gwinput_m8_sources = files(
  tests_source_dir / 'integration/gwinput_m8.cpp',
)
m12_extension_stress_probe_sources = files(
  tests_source_dir / 'integration/m12_extension_stress_probe.cpp',
)
