x11_fake_client_sources = files(
  tests_source_dir / 'helpers/x11_fake_client.cpp',
  tests_source_dir / 'helpers/x11_request_builder.cpp',
  tests_source_dir / 'integration/server_fixture.cpp',
)
x11_probe_sources = {
  'x11_setup_probe': files(
    tests_source_dir / 'integration/x11_setup_probe.cpp',
  ),
  'x11_milestone2_probe': files(
    tests_source_dir / 'integration/x11_milestone2_probe.cpp',
  ),
  'x11_milestone6_probe': files(
    tests_source_dir / 'integration/x11_milestone6_probe.cpp',
  ),
  'x11_milestone7_probe': files(
    tests_source_dir / 'integration/x11_milestone7_probe.cpp',
  ),
}
x11_milestone8_probe_sources = files(
  tests_source_dir / 'integration/x11_milestone8_probe.cpp',
  tests_source_dir / 'helpers/synthetic_input_client.cpp',
)
