xcb_probe_sources = {
  'm6_restart_hold_probe': files(
    tests_source_dir / 'xcb/m6_restart_hold_probe.c',
  ),
  'xcb_setup_probe': files(tests_source_dir / 'xcb/xcb_setup_probe.c'),
  'xcb_milestone2_probe': files(
    tests_source_dir / 'xcb/xcb_milestone2_probe.c',
  ),
  'xcb_milestone6_probe': files(
    tests_source_dir / 'xcb/xcb_milestone6_probe.c',
  ),
  'xcb_milestone7_probe': files(
    tests_source_dir / 'xcb/xcb_milestone7_probe.c',
  ),
  'm11_selection_probe': files(
    tests_source_dir / 'xcb/m11_selection_probe.cpp',
  ),
  'm11_xterm_geometry_probe': files(
    tests_source_dir / 'xcb/m11_xterm_geometry_probe.cpp',
  ),
  'm7_restart_hold_probe': files(
    tests_source_dir / 'xcb/m7_restart_hold_probe.c',
  ),
}
xcb_ipc_probe_sources = {
  'xcb_milestone8_probe': files(
    tests_source_dir / 'xcb/xcb_milestone8_probe.cpp',
    tests_source_dir / 'helpers/synthetic_input_client.cpp',
  ),
  'm8_restart_hold_probe': files(
    tests_source_dir / 'xcb/m8_restart_hold_probe.cpp',
    tests_source_dir / 'helpers/synthetic_input_client.cpp',
  ),
}
